--- a/EncDecv4.ipynb
+++ b/EncDecv4.ipynb
@@ -2389,7 +2389,6 @@
         "\n",
         "    return board_array\n",
         "\n",
-        "# Example usage:\n",
         "board_states = df[\"Board\"].apply(lambda x : create_board_array(x))"
       ]
     },
@@ -2474,39 +2473,6 @@
       "source": [
         "embedding_matrix.shape"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DM_mkvyP1PQB",
-        "outputId": "7f46bb00-bf09-4dbb-b896-ee996256968b"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'xx'"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "tokenizer.decode([5324])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -2656,26 +2622,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'sharp'"
-            ]
-          },
-          "execution_count": 33,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "tokenizer.decode(chessdata[30111]['comment'])"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 156,
       "metadata": {
         "id": "p0bwNWcPPXUw"
@@ -2684,15 +2630,6 @@
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "# device = torch.device(\"cpu\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8SXuJUCVN4xM"
-      },
-      "source": [
-        "# New stuff"
       ]
     },
     {
@@ -2716,15 +2653,13 @@
         "        super(EncoderRNN, self).__init__()\n",
         "        self.hidden_size = hidden_size\n",
         "\n",
-        "        # Assuming the board is represented as a 8x8 grid and each square is one-hot encoded\n",
-        "        self.board_size = board_size  # This could be 8*8 if you're simply flattening the board\n",
+        "        self.board_size = board_size \n",
         "        self.move_embedding = nn.Embedding(len(UCI_MOVES), move_embed_size)\n",
         "        self.player_embedding = nn.Embedding(2, player_embed_size)\n",
-        "        # Optional: Convolutional layers to process the board state\n",
-        "        # Adjust these parameters according to your needs\n",
+        "\n",
         "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, stride=1, padding=1)\n",
         "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, stride=1, padding=1)\n",
-        "        self.board_processing_size = 32 * 8 * 8  # Adjust based on your conv layer designs\n",
+        "        self.board_processing_size = 32 * 8 * 8  \n",
         "\n",
         "        # Fully connected layer to combine board state, move, and player turn into a single vector\n",
         "        total_input_size = self.board_processing_size + player_embed_size + move_embed_size\n",
@@ -2733,7 +2668,6 @@
         "        self.gru = nn.GRU(hidden_size, hidden_size,dropout= 0.4)\n",
         "\n",
         "    def forward(self, board, move, player, hidden):\n",
-        "        # Assuming board is a 8x8 grid, reshape it for the convolutional layer\n",
         "        board = board.float()\n",
         "        board = board.unsqueeze(0).unsqueeze(0)  # Add batch and channel dimensions\n",
         "        board = F.relu(self.conv1(board))\n",
@@ -2749,10 +2683,8 @@
         "        # Pass the combined vector through the fully connected layer\n",
         "        combined = F.relu(self.fc(combined))\n",
         "\n",
-        "        # GRU expects inputs of shape (seq_len, batch, input_size), seq_len and batch are 1 in this case\n",
         "        combined = combined.unsqueeze(0)\n",
         "        output, hidden = self.gru(combined, hidden)\n",
-        "        # output = output.unsqueeze(0)  # Add a batch dimension if not already present\n",
         "\n",
         "        return output, hidden\n",
         "\n",
@@ -2811,9 +2743,7 @@
         "        target_length = comment.size(0)\n",
         "        encoder = encoder.to(device)\n",
         "        decoder = decoder.to(device)\n",
-        "        # Initialize hidden state and zero the gradients\n",
         "        loss = 0\n",
-        "        # comment = torch.cat((comment,torch.tensor(EOS_token).to(device).reshape(-1)))\n",
         "        # Forward pass through encoder\n",
         "        encoder_output, _ = encoder(board, move, player, encoder_hidden)\n",
         "\n",
@@ -2826,9 +2756,6 @@
         "        # Backpropagation\n",
         "        loss.backward()\n",
         "        nn.utils.clip_grad_norm_(parameters = list(encoder.parameters()) + list(decoder.parameters()), max_norm=1.0)\n",
-        "        # for name, param in list(encoder.named_parameters()) + list(decoder.named_parameters()):\n",
-        "        #     if param.grad is not None:\n",
-        "        #         print(name, torch.mean(param.grad))\n",
         "        encoder_optimizer.step()\n",
         "\n",
         "        total_loss += loss.item()\n",
@@ -2990,7 +2917,7 @@
         "        if new_game:\n",
         "\n",
         "          encoder_hidden = encoder.initHidden().to(device)\n",
-        "        features,encoder_hidden = encoder(board, move, player, encoder_hidden)  # (1, 49, 2048) for single image\n",
+        "        features,encoder_hidden = encoder(board, move, player, encoder_hidden)  \n",
         "        #features = features.squeeze(0)\n",
         "\n",
         "        hidden = decoder.initHidden()  # Initialize hidden states\n",
@@ -3129,9 +3056,7 @@
         }
       ],
       "source": [
-        "# def generate_caption(board, move, player, encoder_hidden, encoder, decoder, vocab, max_length=50):\n",
-        "# text,hidden = generate_caption(testdata[0]['board'], testdata[0]['move'], testdata[0]['turn'], encoder, decoder, tokenizer,1,None)\n",
-        "# print(text)\n",
+        "\n",
         "\n",
         "prev_gno = -1\n",
         "reset_hidden = 0\n",
@@ -3145,28 +3070,6 @@
         "      reset_hidden = 0\n",
         "    text,hidden = generate_caption(testdata[i]['board'], testdata[i]['move'], testdata[i]['turn'], encoder, decoder, tokenizer,reset_hidden,encoder_hidden=hidden)\n",
         "    print(text)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gzPOBUqXuDOz"
-      },
-      "outputs": [],
-      "source": [
-        "tokenizer.encode(\"No\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FaVqpL8QdZCx"
-      },
-      "outputs": [],
-      "source": [
-        "chessdata[5]"
       ]
     },
     {
